<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="sdefault">4</string>
    <string name="current_uvi_title">Current UVI</string>
    <string name="current_uvi_description">UVI Scale</string>

    <string name="collect_accelerometer">Collect Accelerometer</string>
    <string name="collect_light">Collect Light</string>
    <string name="ui_collector_radio_shade_title">Shade</string>
    <string name="ui_collector_radio_sun_title">Sun</string>
    <string name="ui_collector_radio_standing_title">Standing</string>
    <string name="ui_collector_radio_cloud_title">Cloud</string>
    <string name="ui_collector_radio_walking_title">Walking</string>
    <string name="ui_collector_radio_running_title">Running</string>
    <string name="ui_collector_radio_other_title">Others</string>
    <string name="ui_collector_button_start_title">Start</string>
    <string name="ui_collector_button_stop_title">Stop</string>
    <string name="ui_collector_button_delete_title">Delete</string>
    <string name="ui_collector_toast_file_deleted">All files deleted.</string>
    <string name="ui_sensor_service_notification_ticker">Collector started recording.</string>
    <string name="ui_sensor_service_notification_title">MyRuns Collector</string>
    <string name="ui_sensor_service_notification_content">Recording your activity data now</string>
    <string name="ui_sensor_service_toast_success_file_updated">Data file updated.</string>
    <string name="ui_sensor_service_toast_success_file_created">Data file created.</string>
    <string name="ui_sensor_service_toast_error_file_saving_failed">Failed saving the file. Check your storage.</string>
    <string name = "app_id">183800615143978</string>
    <string name="app_name">MyRuns5</string>
   
  
  
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    
    <string name="StartFragment_InputType">Input type</string>
    <string name="StartFragment_ActivityType">Activity Type</string>
    
    <string-array name="InputTypeEntries">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    
    <string-array name="ActivityTypeEntries">
        <item>Running</item>
        <item>Cycling</item>
        <item>Walking</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>  
    
    <string name="button_start">Start</string>
    
    <string-array name="input_items">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heartrate</item>
        <item>Comment</item>
    </string-array>
    
    <string name="title_button_save">Save</string>
    <string name="title_button_cancel">Cancel</string>
        
    
    <string name="title_dialog_date">To Be Modified.</string>
    <string name="title_dialog_time">Set Time</string>
    <string name="title_dialog_duration">Duration (Minitues)</string>
    <string name="title_dialog_distance">Distance (Miles)</string>
    <string name="title_dialog_calories">Calories</string>
    <string name="title_dialog_heart_rate">Averate Heart Rate (BPM)</string>
    <string name="title_dialog_comment">Comment</string>
    
 	<string name="title_button_alert_ok">OK</string>   
 	<string name="title_button_alert_cancel">Cancel</string>   
    
	<string name="dialog_comment_hint">How was the exercise? Speak your mind here:)</string>
    
    <string name="string_miles">Miles</string>
    
    <string name="title_display_activity_type">Activity type</string>
    <string name="title_display_date_time">Date and time</string>
    <string name="title_display_duration">Duration (Minutes)</string>
    <string name="title_display_distance">Distance (Miles)</string>
    <string name="title_display_calorie">Calories</string>
    <string name="title_display_heart_rate">Heartrate (BPM)</string>
    <string name="title_display_comment">Comment</string>
    
    <string-array name="unit_display_value">
        <item>@string/kilometers</item>
        <item>@string/miles</item>
    </string-array>

    <string name="kilometers">Kilometers</string>
    <string name="miles">Miles</string>
    <string name="feet">Feet</string>
    <string name="mile_per_hr">m/h</string>
    
    <string name="preference_key_unit_display">ui_settings_unit_display</string>
    
    
    
    
    

    <string name="startTab_title">START</string>
    <string name="historyTab_title">HISTORY</string>
    <string name="settingsTab_title">SETTINGS</string>
    <string name="uviTab_title">UVI</string>
    <string name="graphTab_title">RELATIVE</string>
    
    <string name="StartFragment_prompt">impatient, huh?</string>
    <string name="HistoryFragment_prompt">brand new era!</string>
    <string name="SettingsFragment_prompt">that\'s the right place!</string>
    
    <string name="account_preference_title">ACCOUNT PREFERENCE</string>
    <string name="additional_settings_title">ADDITIONAL SETTINGS</string>
    <string name="misc_title">MISC.</string>
    
    <string name="privacy_setting_title">Privacy setting</string>
    <string name="privacy_setting_summary">Posting your records anonymously</string>
    
    <string name="unit_preference_summary">Select the units in which you would like to see distance values</string>
    <string name="unit_preference_title">Unit Preference</string>
    <string name="unit_preference_dialogTitle">Unit Preference</string>
    <string-array name="unit_preference_entries">
        <item>Metric (meters)</item>
        <item>Imperial (feet)</item>
    </string-array>
    <string-array name="unit_preference_entryValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    
    <string name="comment_title">Comment</string>
    <string name="comment_summary">Any suggestion to this course?</string>
    <string name="comment_dialogTitle">Comment</string>
    
    <string name="class_homepage_title">Class homepage</string>
    <string name="class_homepage_summary">http://www.cs.dartmouth.edu/~campbell</string>
    
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_summary">Names, Email, Class, etc</string>
    
    <string name="avatar_description">Profile photo</string>
    <string name="photo_profile_title">Profile photo</string>
    
    <string name="button_change">Change</string>
    
    <string name="camara_photo_picker_dialog">Take from camera</string>
    <string name="gallery_photo_picker_dialog">Select from gallery</string>
    
    <string name="photo_picker_tag">photo picker tag</string>
    <string name="photo_picker_title">Select profile image</string>

    <string-array name="photo_picker_items">
        <item>Take picture from camera</item>
        <item>Select from gallery</item>
    </string-array>
    
    <string name="photo_filename">avatar.png</string>
    
    
    <string name="title_birthday">Birthday</string>
    <string name="hint_birthday">Select your Birthday!</string>
    <string name="select_birthday">Select</string>
    
    
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#888888</color>
    
    <string name="action_settings">Settings</string>
    <string name="test">test string</string>

    <string name="title_Name">Name</string>
    <string name="hint_Name">Your name here</string>
    
    <string name="title_Email">Email</string>
    <string name="hint_Email">Your email here</string>
    
    <string name="title_Gender">Gender</string>
    <string name="title_Class">Class</string>
    <string name="title_Major">Major</string>
        
    <string name="RadioButtonGenderFemale">Female</string>
    <string name="RadioButtonGenderMale">Male</string>
    
    <string name="title_Phone">Phone</string>
    <string name="hint_Phone">Your phone number here</string>
    
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    
    <string name="msg_cancel">I\'ll miss you</string>
    <string name="msg_save">profile saved:) see you</string>
    <string name="msg_later">later</string>
    
    <string name="data_Name">name</string>
    <string name="data_Phone">phone</string>
    <string name="data_Email">email</string>
    <string name="data_GenderF">female</string>
    <string name="data_GenderM">mail</string>
    <string name="data_Class">class</string>
    <string name="data_Major">major</string>
    <string name="data_Birthday">birthday</string>
    
    <string-array name="MajorHints">
        <item>African and African American Studies</item>
        <item>Ancient History</item>
        <item>Anthropology</item>
        <item>Arabic</item>
        <item>Art History</item>
        <item>Asian and Middle Eastern Studies</item>
        <item>Astronomy</item>
        <item>Biological Chemistry</item>
        <item>Biological Sciences</item>
        <item>Biomedical Engineering Sciences</item>
        <item>Biophysical Chemistry</item>
        <item>Chemistry</item>
        <item>Chinese</item>
        <item>Classical Archeology</item>
        <item>Classical Languages and Literatures</item>
        <item>Classical Studies</item>
        <item>Cognitive Science</item>
        <item>Comparative Literature</item>
        <item>Computer Science</item>
        <item>Earth Sciences</item>
        <item>Economics</item>
        <item>Engineering Physics</item>
        <item>Engineering Sciences</item>
        <item>English</item>
        <item>Environmental Studies</item>
        <item>Film and Media Studies</item>
        <item>French</item>
        <item>French Studies</item>
        <item>Geography</item>
        <item>German</item>
        <item>Government</item>
        <item>Hebrew</item>
        <item>Hispanic Studies</item>
        <item>History</item>
        <item>Italian</item>
        <item>Italian Studies</item>
        <item>Japanese</item>
        <item>Latin American, Latino, and Caribbean Studies</item>
        <item>Linguistics</item>
        <item>Mathematics</item>
        <item>Mathematics and Social Sciences</item>
        <item>Music</item>
        <item>Native American Studies</item>
        <item>Neuroscience</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Religion</item>
        <item>Romance Languages(Italian)</item>
        <item>Romance Languages(French)</item>
        <item>Romance Studies</item>
        <item>Russian</item>
        <item>Russian Area Studies</item>
        <item>Studio Art</item>
        <item>Sociology</item>
        <item>Theater</item>
        <item>Women\'s and Gender Studies</item>
    </string-array>
    
    <string-array name="SpinnerEntries">
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>
</resources>