<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_activity_type">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_activity_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>

    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_date_time">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>
    
    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_duration">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>
    
    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_distance">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>
    
    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_calorie">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_calorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>
    
    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_heart_rate">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_heart_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>
    
    <TextView
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_display_comment">
    </TextView>
    
    <EditText
        android:id="@+id/edit_display_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:focusable="false">
    </EditText>
    
</LinearLayout>