<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/current_uvi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/current_uvi_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />
    
    <TextView
        android:id="@+id/current_uvi"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:shadowColor="@android:color/white"
        android:shadowRadius="10.0"
        android:text="@string/sdefault"
        android:textColor="@color/orange"
        android:textSize="70sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/current_uvi_description"
        android:src="@drawable/uviscale" />

</LinearLayout>